event timeline box modified ,overflow fixed and font changed

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'IBM Plex Mono', monospace;
+    color: #e5e7eb;
 }
 body{
     background-color: #000;
@@ -15,3 +16,6 @@ body{
     padding: 10px 20px;
 }
 
+.container1{
+  width: 100vw;
+}
